
0.9.8g Jul 15, 2004
 * updated documentation
 * added support for ftp source caching
 * translation updates
 * support for only downloading package data if newer than cached during --update
 * now caches package data for each individual package sourch per --update run
 * moved spinner and progress_callback from main.[ch] to curl.[ch]
 * moved is_conflicted from action.[ch] to transaction.[ch]
 * added swedish translation by Joel Bjurman (ypolt@lediga.st)
 * documentation updates

0.9.8f Jun 29, 2004
 * makefile update, autogenerated slapt-getrc.new is now bare bones with a
   pointer comment to /usr/doc/slapt-get*/example.slapt-getrc
 * updated example.slapt-getrc setting slackware-10.0 as default release source
 * initialized various integer values that needed it
 * /pasture support
 * makefile updates
 * fixed /testing/ and /extra/ support so that the download url's and md5
   checksums are detected/generated correctly

0.9.8e Jun 07, 2004
 * moved search_transaction() calls into add_[install,upgrade,exclude]_to_transaction()
 * updated doinstall make target
 * dist-upgrade will now reinstall if the package versions differ (vanilla
   version cmp not good enough since it ignores arch)... this fixes packages
   with same version as previous save for the arch not being upgraded
 * makefile updates... thanks to Piotr Simon (sajmon@tenboard.com)
 * updated slapt-getrc to reflect new linuxpackages.net URLs
 * added check for package name and version lengths in
   pkg_action_install() and pkg_action_show()
 * refactored working_dir_init()
 * cleaned up parse_meta_entry() and lookup_pkg_dependencies()
 * moved parse_exclude() from configuration.c to package.c
 * only show download statistics if we are going to download something, not for
   removes only
 * updated handle_transaction so that the size reported for existing
   downloaded data is never below zero
 * fixed translation msgid for checksum mismatch
 * updated translations (added entry for existing download and